samples/_failures_safe/1761154943_35e7e8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_178fa08c.c: In function ‘bfs_shortest_path’:
./samples/SAFE/__tmp_178fa08c.c:175:9: error: expected declaration or statement at end of input
  175 |         }
      |         ^
./samples/SAFE/__tmp_178fa08c.c:175:9: error: expected declaration or statement at end of input
